[gd_scene load_steps=10 format=3 uid="uid://bxbv0pjrw5m0i"]

[ext_resource type="Script" path="res://Scripts/generate_cards.gd" id="1_10yab"]
[ext_resource type="Theme" uid="uid://doer8mqlh26ij" path="res://Themes/Theme.tres" id="1_fm4ds"]
[ext_resource type="StyleBox" uid="uid://c1c6qkqaplatx" path="res://Themes/CardPanel.tres" id="3_po1ig"]
[ext_resource type="FontFile" uid="uid://uif4mjsdqker" path="res://Fonts/Oswald-VariableFont_wght.ttf" id="4_u3d5b"]
[ext_resource type="Texture2D" uid="uid://bq5504pqi6eqx" path="res://icons/drinkingdeck.png" id="5_jjeac"]
[ext_resource type="Texture2D" uid="uid://xrymm8t70ft3" path="res://icons/Drink'sDeckSmall.png" id="6_2eo1j"]

[sub_resource type="LabelSettings" id="LabelSettings_kj67p"]
font_size = 40
font_color = Color(0.948067, 0, 0.206232, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0ut5y"]
font = ExtResource("4_u3d5b")
font_size = 60
font_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_s0rtg"]
default_font_size = 100

[node name="GenerateCards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fm4ds")
script = ExtResource("1_10yab")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0338533, 0.0338533, 0.0338533, 1)

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.012
offset_left = -356.0
offset_top = 671.0
offset_right = 388.0
offset_bottom = 826.96
grow_horizontal = 2
text = "Ah n√£o! As cartas acabaram! :("
label_settings = SubResource("LabelSettings_kj67p")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CardPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 44.0
offset_top = -752.0
offset_right = -48.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_po1ig")

[node name="CardLabel" type="Label" parent="CardPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 98.0
offset_top = -427.0
offset_right = -81.0
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Carta Gerada aqui "
label_settings = SubResource("LabelSettings_0ut5y")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Drinkingdeck" type="Sprite2D" parent="CardPanel"]
position = Vector2(118, 127)
scale = Vector2(0.109863, 0.109863)
texture = ExtResource("5_jjeac")

[node name="Drinkingdeck2" type="Sprite2D" parent="CardPanel"]
position = Vector2(864, 986)
rotation = 3.14159
scale = Vector2(0.109863, 0.109863)
texture = ExtResource("5_jjeac")

[node name="GenerateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -536.0
offset_right = 134.0
offset_bottom = -272.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = ExtResource("1_fm4ds")
theme_override_font_sizes/font_size = 240
icon = ExtResource("6_2eo1j")
flat = true

[node name="Sair" type="Button" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 1682.0
offset_right = 632.0
offset_bottom = 1839.0
size_flags_vertical = 3
focus_mode = 0
theme = SubResource("Theme_s0rtg")
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.736574, 0.499666, 0, 1)
theme_override_colors/font_color = Color(1, 0.701108, 0.17569, 1)
text = "SAIR"
flat = true

[connection signal="pressed" from="GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_sair_pressed"]
